[package]
name = "polycue"
version = "0.1.0"
edition = "2021"
description = "A Rust application for generating polygonal fiducial markers optimized for photogrammetry and computer vision"
license = "MIT"
repository = "https://github.com/Chrismofer/PolyCue"
authors = ["Chrismofer"]
keywords = ["fiducial", "markers", "computer-vision", "photogrammetry", "3d-scanning"]
categories = ["graphics", "visualization", "computer-vision"]

[dependencies]
image = "0.25"
palette = { version = "0.7", default-features = true }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eframe = { version = "0.27", default-features = true, features = ["wgpu"] }
rayon = "1.10"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
